--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ target/
 dbt_packages/
 logs/
 # end dbt Cloud content
+# .gitignore
+*.pyc
+*.log
+venv/
+taxi-transport-analytics-fbfa6653d305.json
+target/
+dbt_packages/
