--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,107 @@
-# ignore virtual env
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
 .venv/
-.vscode
-# ignore raw CSV data
+venv/
+ENV/
+env/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Environment variables
+.env
+*.env
+!.env.example
+
+# Data files (local storage)
+data/
+raw_parquet/
 combined_data/
-
-# ignore Parquet outputs
 data_parquet/
+*.csv
+*.parquet
+*.gz
 
-# Default .gitignore content added by dbt Cloud# you shouldn't commit these into source control
-# these are the default directory names, adjust/add to fit your needs
+# GCP Credentials
+config/credentials/
+*.json
+!config/dbt/*.json
+
+# dbt
+dbt/target/
+dbt/dbt_packages/
+dbt/logs/
+dbt/.user.yml
 target/
 dbt_packages/
 logs/
-# end dbt Cloud content
-# .gitignore
-*.pyc
+
+# Airflow/Orchestration
+orchestration/logs/
+orchestration/__pycache__/
+orchestration/.airflowignore
+orchestration/airflow.db
+orchestration/airflow.cfg
+orchestration/webserver_config.py
+orchestration/standalone_admin_password.txt
+
+# Docker
+docker-compose.override.yml
+.dockerignore
+
+# Logs
 *.log
-venv/
-taxi-transport-analytics-fbfa6653d305.json
-target/
-dbt_packages/
+*.out
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+*.ipynb
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.bak
+*.swp
+
+# Legacy/Old files
+extract/*.pyc
+load/*.pyc
